# lib_rpl

./: CMakeLists.txt
rpl/: before_next.h  combine.h  consumer.h  event_stream.h  filter.h  lifetime.h  map.h  merge.h  operators_tests.cpp  producer_tests.cpp  take.h  variable.h  variable_tests.cpp
rpl/details/: callable.h
